--- a/lunch_check/index.html
+++ b/lunch_check/index.html
@@ -19,6 +19,10 @@
                        placeholder="list comma separated dishes you usually have for lunch"
                        ng-model="lunchItemsInput">
             </div>
+            <p>Note that we do NOT consider empty items.</p>
+            <p>For example,
+                <span class="input-example">a, ,f</span> will be counted as 2 items;
+                <span class="input-example">,,,,</span> will be counted as no items.</p>
             <div class="form-group">
                 <button class="btn btn-primary"
                         ng-click="displayConclusion()">
