--- a/custom_services/index.html
+++ b/custom_services/index.html
@@ -27,6 +27,7 @@
               <ol>
                 <li ng-repeat="item in showList.items">
                   {{ item.quantity }} of {{ item.name }}
+                  <button ng-click="showList.removeItem($index);">Remove item</button>
                 </li>
               </ol>
             </div>
