--- a/providers/index.html
+++ b/providers/index.html
@@ -23,7 +23,8 @@
           <button ng-click="list.removeItem($index);">Remove Item</button>
         </li>
       </ol>
-      <div class="error">Error: {{ list.errorMessage }}</div>
+      <!-- <div ng-if="list.errorMessage" class="error">Error: {{ list.errorMessage }}</div> -->
+      <div ng-show="list.errorMessage" class="error">Error: {{ list.errorMessage }}</div>
     </div>
   </main>
 </body>
