index: Add assignment links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
-        <title>Coursera Fullstack course</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Coursera Fullstack course</title>
     </head>
     <body>
         <h1>Coursera Fullstack course</h1>
+        <ul>
+          <li><a href="/lunch_check">Lunch check</a></li>
+          <li><a href="/shopping_list_check_off">Shopping List Check Off</a></li>
+        </ul>
     </body>
 </html>
