all: Keep common js/css/fonts in the root

--- a/hello_angular/index.html
+++ b/hello_angular/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="helloApp">
     <head>
         <meta charset="utf-8">
-        <script src="js/angular.min.js"></script>
+        <script src="/coursera-fs5-angular/js/angular.min.js"></script>
         <script src="js/app.js"></script>
         <title>Hello Angular</title>
     </head>
