--- a/prototypal_inheritance/index.html
+++ b/prototypal_inheritance/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Controller As Syntax</title>
-        <script src="js/angular.min.js"></script>
+        <script src="/coursera-fs5-angular/js/angular.min.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body>
