--- a/shopping_list_check_off/index.html
+++ b/shopping_list_check_off/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/angular.min.js"></script>
+    <script src="/coursera-fs5-angular/js/angular.min.js"></script>
     <script src="js/app.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/coursera-fs5-angular/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Shopping List</title>
   </head>
