--- a/custom_services/index.html
+++ b/custom_services/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Custom services</title>
-        <script src="js/angular.min.js"></script>
+        <script src="/coursera-fs5-angular/js/angular.min.js"></script>
         <script src="js/app.js"></script>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="/coursera-fs5-angular/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
