--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/coursera-fs5-angular/css/bootstrap.min.css">
         <title>Coursera Fullstack course</title>
     </head>
-    <body>
-        <h1>Coursera Fullstack course</h1>
-        <ul>
-          <li><a href="/lunch_check">Lunch check</a></li>
-          <li><a href="/shopping_list_check_off">Shopping List Check Off</a></li>
-        </ul>
+    <body class="container">
+        <main>
+          <div class="row">
+            <h1 class="text-center col-md-12">Coursera Fullstack course</h1>
+          </div>
+          <div class="row">
+            <h2>Assignments</h2>
+            <ul class="col-md-12">
+              <li><a href="/coursera-fs5-angular/lunch_check">Lunch check</a></li>
+              <li><a href="/coursera-fs5-angular/shopping_list_check_off">Shopping List Check Off</a></li>
+            </ul>
+          </div>
     </body>
 </html>
