--- a/low_cohesion_and_tight_coupling/index.html
+++ b/low_cohesion_and_tight_coupling/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <script src="js/app.js"></script>
+        <link rel="stylesheet" href="/coursera-fs5-angular/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <title>Low Cohesion and Tight Coupling</title>
     </head>
