--- a/name_calculator/index.html
+++ b/name_calculator/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/angular.min.js"></script>
+        <script src="/coursera-fs5-angular/js/angular.min.js"></script>
         <script src="js/app.js"></script>
+        <link rel="stylesheet" href="/coursera-fs5-angular/css/bootstrap.min.css">
         <title>Name Calculator</title>
     </head>
     <body ng-app="NameCalculator">
